// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentReadingService readContent should read a list with 2 items separated by an empty line above the cursor 1`] = `
{
  "blocks": [
    {
      "content": "
- First item in the list

- Second item in the list
",
      "endLine": 5,
      "startLine": 1,
      "types": [
        "list",
      ],
    },
  ],
  "elementType": "list",
  "file": {
    "name": "",
    "path": "",
  },
  "range": {
    "from": {
      "ch": 0,
      "line": 1,
    },
    "to": {
      "ch": 0,
      "line": 5,
    },
  },
  "source": "element",
}
`;

exports[`ContentReadingService readContent should read a list with 2 items separated by an empty line below the cursor 1`] = `
{
  "blocks": [
    {
      "content": "
- First item in the list


- Second item in the list
",
      "endLine": 6,
      "startLine": 1,
      "types": [
        "list",
      ],
    },
  ],
  "elementType": "list",
  "file": {
    "name": "",
    "path": "",
  },
  "range": {
    "from": {
      "ch": 0,
      "line": 1,
    },
    "to": {
      "ch": 0,
      "line": 6,
    },
  },
  "source": "element",
}
`;

exports[`ContentReadingService readContent should read all content below the cursor when blocksToRead is -1 1`] = `
{
  "blocks": [
    {
      "content": "
- List item 1
- List item 2
- List item 3
",
      "endLine": 12,
      "startLine": 8,
      "types": [
        "list",
      ],
    },
    {
      "content": "
## Section 3
Final paragraph with more content.
Multiple lines here.
",
      "endLine": 16,
      "startLine": 12,
      "types": [
        "heading",
        "paragraph",
      ],
    },
    {
      "content": "
> A blockquote at the end.",
      "endLine": 17,
      "startLine": 16,
      "types": [
        "blockquote",
      ],
    },
  ],
  "elementType": undefined,
  "file": {
    "name": "",
    "path": "",
  },
  "range": {
    "from": {
      "ch": 0,
      "line": 8,
    },
    "to": {
      "ch": 26,
      "line": 17,
    },
  },
  "source": "cursor",
}
`;

exports[`ContentReadingService readContent should read the code block below the cursor 1`] = `
{
  "blocks": [
    {
      "content": "\`\`\`js
function greet(name) {
  const greet = 'Greet: ';

  return greet + name;
}
\`\`\`
",
      "endLine": 11,
      "startLine": 4,
      "types": [
        "code",
      ],
    },
  ],
  "elementType": "code",
  "file": {
    "name": "",
    "path": "",
  },
  "range": {
    "from": {
      "ch": 0,
      "line": 4,
    },
    "to": {
      "ch": 0,
      "line": 11,
    },
  },
  "source": "element",
}
`;

exports[`ContentReadingService readContent should read the list above the cursor 1`] = `
{
  "blocks": [
    {
      "content": "
This is the second list
- Item 3
- Item 4
",
      "endLine": 7,
      "startLine": 3,
      "types": [
        "list",
        "paragraph",
      ],
    },
  ],
  "elementType": "list",
  "file": {
    "name": "",
    "path": "",
  },
  "range": {
    "from": {
      "ch": 0,
      "line": 3,
    },
    "to": {
      "ch": 0,
      "line": 7,
    },
  },
  "source": "element",
}
`;

exports[`ContentReadingService readContent should read the list with 2 items above the cursor at non-null input line 1`] = `
{
  "blocks": [
    {
      "content": "- Item 1
- Item 2
",
      "endLine": 2,
      "startLine": 0,
      "types": [
        "list",
      ],
    },
  ],
  "elementType": undefined,
  "file": {
    "name": "",
    "path": "",
  },
  "range": {
    "from": {
      "ch": 0,
      "line": 0,
    },
    "to": {
      "ch": 0,
      "line": 2,
    },
  },
  "source": "cursor",
}
`;

exports[`ContentReadingService readContent should read the paragraph block below the cursor 1`] = `
{
  "blocks": [
    {
      "content": "# Heading
This is a paragraph
With multiple lines
Of content
",
      "endLine": 4,
      "startLine": 0,
      "types": [
        "paragraph",
        "heading",
      ],
    },
  ],
  "elementType": "paragraph",
  "file": {
    "name": "",
    "path": "",
  },
  "range": {
    "from": {
      "ch": 0,
      "line": 0,
    },
    "to": {
      "ch": 0,
      "line": 4,
    },
  },
  "source": "element",
}
`;
